--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
 
-
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 	<div class="carousel-indicators">
 		<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -26,7 +25,7 @@
 	</div>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="images/WEBPAGE_CAROUSEL_COFFEE_SUB-1600x600.jpg" class="d-block w-100" alt="...">
+			<img src="images/WEBPAGE_CAROUSEL_COFFEE_SUB-1600x600.jpg" class="d-block w-100" alt="karrusel-billede">
 			<div class="carousel-caption d-none d-md-block">
 				<h5>First slide label</h5>
 				<p>Some representative placeholder content for the first slide.</p>
